--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -27,8 +27,8 @@
 
 @media (max-width:600px) {
     .header-container nav ul a {
-        padding: 5px 0;
-        width: 50%;
+        padding: 5px 0px;
+        width: 70%;
         text-align: left;
         margin: 0 auto;
     }
