--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -27,9 +27,9 @@
 
 @media (max-width:600px) {
     .header-container nav ul a {
-        padding: 5px 0px;
+        padding: 0px 0px;
         width: 66.666%;
         text-align: left;
-        margin: 0 auto;
+        margin: 6px auto;
     }
 }
