--- a/src/Pages/InventoryItems/InventoryItems.css
+++ b/src/Pages/InventoryItems/InventoryItems.css
@@ -1,10 +1,16 @@
 .inventory-container {
     width: 350px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    transition: 0.3s;
+}
+
+.inventory-container:hover {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .inventory-container img {
     height: 270px;
-
+    height: 250px;
     margin: 0 auto;
     margin-top: 18px;
 }
